--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 sudo: required
-dist: trusty
+dist: xenial
 
 branches:
   only:
@@ -16,7 +16,7 @@ env:
 addons:
   apt:
     sources:
-    - chef-current-trusty
+    - chef-current-xenial
     packages:
     - chefdk
 
