--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,7 @@ install:
   - openssl aes-256-cbc -K $encrypted_4035078d8a92_key -iv $encrypted_4035078d8a92_iv -in codenamephp.pem.enc -out codenamephp.pem -d
 
 script:
-  - chef exec foodcritic .
-  - chef exec rubocop
+  - chef exec cookstyle .
   - chef exec rspec
   - chef exec kitchen test
 
